# recursive-descent

./: .gitignore  CMakeLists.txt  EXAMPLE.TXT  Parser.sln  Parser.vcxproj  Parser.vcxproj.filters  README.md  parser.sln  parser.vcxproj  parser.vcxproj.filters  rules.md
src/: CMakeLists.txt  common.h  main.cpp  pch.h
src/Methods/IdList/: IdList.h
src/Methods/Read/: read.h
src/Methods/Write/: WriteFn.h
src/Reader/: Reader.cpp  Reader.h
src/Tokens/: Tokens.h
src/common/constants/: Lexeme.h
src/common/string/: util.hpp
src/common/types/: BasicTypes.h  MetaTypes.h
src/interpreter/: common_interpreter.h
src/interpreter/context/: IContext.h  IContext_fwd.h
src/interpreter/context/CContext/: Context.h
src/interpreter/expression/: IExpression.h  IExpression_fwd.h
src/interpreter/expression/CExpression/: BaseExpression.cpp  BaseExpression.h
src/interpreter/expression/CExpression/literal/: LiteralExpression.cpp  LiteralExpression.h
src/interpreter/expression/CExpression/write/: WriteExpression.cpp  WriteExpression.h
src/lexer/: Lexer.hpp
src/methods/: Methods.cpp  Methods.h
src/parser/: IParser.h  IParser_fwd.h  Parser.cpp  Parser.h  common_parser.h
src/parser/context/: ParserContext.h
src/parser/lexeme/: Lexeme.h
src/parser/lexeme/CLexeme/: CLexeme.hpp
src/parser/lexeme/exception/: ILexemeException.h
src/parser/lexeme/exception/CException/: LexemeException.hpp
src/parser/lexeme/token/: all.h
src/parser/lexeme/token/definitions/: BaseToken.h  token_definitions.h
src/parser/lexeme/token/definitions/delimeter/: TokenDelimeter.h
src/parser/lexeme/token/definitions/keyword/: TokenKeyword.h
src/parser/lexeme/token/definitions/op/: TokenOperator.h
src/parser/lexeme/token/definitions/special/: TokenSpecial.h
src/parser/lexeme/token/definitions/type/: TokenType.h
src/parser/lexeme/token/delimeter/: TokenDelimeter.h
src/parser/lexeme/token/enum/: TokenEnum.hpp
src/parser/lexeme/token/identifier/: TokenIdentifier.h
src/parser/lexeme/token/type/: TokenType.h
src/parser/lexer/: Lexer.cpp  Lexer.h
src/parser/syntax_analyzer/: SyntaxAnalyzer.cpp  SyntaxAnalyzer.h
src/parser/token/definitions/: TokenDelimeter.h  TokenKeyword.h  TokenOperator.h
src/parser/token/values/: TokenDelimiterValue.hpp  TokenOperatorValue.hpp  TokenValue.hpp
src/parser_context/: ParserContext.hpp
src/syntax_analyzer/: SyntaxAnalyzer.hpp
src/token/definitions/: BaseToken.h  TokenSpecial.h  TokenType.h  definitions.h
src/token/values/: TokenKeywordValue.hpp  TokenSpecialValue.hpp  TokenTypeValue.hpp  values.h
tests/: CMakeLists.txt  EXAMPLE.TXT  common_dirs_defines.h.in  pch.h  test.parser.cpp  tests.cpp
tests/FAILURE/: FAILURE_0.TXT  FAILURE_1.TXT  FAILURE_10.TXT  FAILURE_11.TXT  FAILURE_12.TXT  FAILURE_2.TXT  FAILURE_3.TXT  FAILURE_4.TXT  FAILURE_5.TXT  FAILURE_6.TXT  FAILURE_7.TXT  FAILURE_8.TXT  FAILURE_9.TXT
tests/SUCCESS/: SUCCESS_0.TXT  SUCCESS_1.TXT  SUCCESS_2.TXT
tests/test_cases/: example.txt
tests/test_cases/failure/: failure_0.txt  failure_10.txt  failure_11.txt  failure_12.txt  failure_3.txt  failure_9.txt  missed_colon_befor_var_type.txt  missed_semicolon_after_var_type.txt  typo_at_begin.txt  typo_at_prog.txt  typo_at_prog_id.txt  typo_at_read.txt  wrong_id_in_read_id_list.txt
tests/test_cases/success/: case_insensitive.txt  pascal_no_indent.txt  success_0.txt
tests/tests/: tests.cpp  tests.vcxproj  tests.vcxproj.filters
